nx-libs (2:3.5.0.21-0) UNRELEASED; urgency=low

  * Provide a default keystrokes.cfg in /etc/nx (for nxagent) and /etc/x2go
    (for x2goagent). (Fixes: #199).
  * Set NXAGENT_KEYSTROKEFILE to /etc/x2go/keystrokes.cfg for wrapper x2goagent.
  * For vanilla nxagent move keystrokes.cfg from /etc/nx to /etc/nxagent.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Mar 2013 21:07:42 +0100

nx-libs (2:3.5.0.20-0) unstable; urgency=low

  * Fix faulty symlink path. Make sure that x2goagent symlink
    does not point to absolute path somewhere within the build
    environment. (Fixes: #156).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Mar 2013 20:43:31 +0100

nx-libs (2:3.5.0.19-0) unstable; urgency=low

  * Add Jan's reasoning for using string_rep() instead of bash based
    string substitutions as comment to /debian/Makefile.replaces.sh.
  * Fix FTBFS for .deb packages after including fix for #145.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Mar 2013 08:59:01 +0100

nx-libs (2:3.5.0.18-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Remove duplicate install of nxproxy from main Makefile. Spotted by Jan
    Engelhard.
  * Work-in patch from Jan Engehardt for working around different
    improper bash implementations of string-in-string replacing. (Fixes:
    #145).
  * Main Makefile: Use absolute symlink when linking from $(X2GOLIBDIR)
    into $(NXLIBDIR) (i.e. linking x2goagent -> nxagent). (Fixes: #143).

  [ Orion Poplawski ]
  * Fix wrong symlink direction of libNX_* files. (Fixes: #107).
  * Avoid building of libxcomp1 (which actually is identical to libxcomp3,
    just with a wrong name). (Fixes: #104).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:39:39 +0100

nx-libs (2:3.5.0.17-0) unstable; urgency=low

  [ Jan Engelhardt ]
  * Fix /bin/Makefile. Add $(DESTDIR) to every install path.

  [ Alexander Wuerstlein ]