@@ -4,6 +4,9 @@ nx-libs (2:3.5.0.21-0) UNRELEASED; urgency=low
     (for x2goagent). (Fixes: #199).
   * Set NXAGENT_KEYSTROKEFILE to /etc/x2go/keystrokes.cfg for wrapper x2goagent.
   * For vanilla nxagent move keystrokes.cfg from /etc/nx to /etc/nxagent.
+  * Tarball roller script:
+    + Only install keystrokes.cfg when in full mode.
+    + Only install nxproxy wrapper when in lite mode.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Mar 2013 21:07:42 +0100
 
